catalog Offers page works, in app-header fixed z-index, getAll getOne in offerservice added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,6 +27,7 @@ app-header {
   text-align: center;
 
   padding-bottom: 1vw;
+  z-index: 27;
 }
 
 main {
