--- a/src/app/main-components/navigation/navigation.component.css
+++ b/src/app/main-components/navigation/navigation.component.css
@@ -18,6 +18,7 @@ nav {
   display: flex;
   justify-content: center;
   padding: .2em;
+  z-index: 25;
 }
 
 a {
